--- a/源码阅读笔记.md
+++ b/源码阅读笔记.md
@@ -46,3 +46,8 @@ Mapper里面的方法最终会被代理为MapperMethod
 Mybatis的多参数都是通过map传递的参考ParamNameResolver#getNamedParams
 
 一级缓存在Executor里面 二级缓存存在MappedStatement里面
+
+## spring相关
+createBean里面先调用InstantiationAwareBeanPostProcessor这里可以用于返回动态代理去更改一个bean
+然后调用MergedBeanDefinitionPostProcessor用于收集bean中的一些特定的属性或者方法
+InstantiationAwareBeanPostProcessor
